# readfileqml

./: CMakeLists.txt  config.java~  manifest.json.in
app/: CMakeLists.txt  Config.java~  ReadFileQML.desktop.in  config.java  readfileqml.qml
app/tests/autopilot/: run
app/tests/autopilot/readfileqml/main/: test_main.py
backend/: CMakeLists.txt
backend/modules/ReadFileQML/: backend.cpp  backend.h  fileio.cpp  fileio.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: readfileqml.liu-xiao-guo.pot
